--- a/packages/design-system/design-tokens/extensions/ui-force/deprecated/border-color.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/deprecated/border-color.yml
@@ -12,6 +12,8 @@ imports:
 - ../../../aliases/colors.yml
 - ../../../aliases/color-palettes.yml
 props:
+  COLOR_BORDER_PRIMARY:
+    value: '{!PALETTE_COOL_GRAY_5}'
   COLOR_BORDER_BRAND_PRIMARY:
     value: '{!AZURE}'
   COLOR_BORDER_BRAND_PRIMARY_HOVER:
@@ -34,3 +36,38 @@ props:
     cssProperties:
     - stroke
     comment: Stroke color for our global header buttons.
+  COLOR_STROKE_BRAND:
+    value: '{!SCIENCE_BLUE}'
+    cssProperties:
+    - stroke
+    comment: Our product brand blue.
+  COLOR_STROKE_BRAND_HOVER:
+    value: '{!SCIENCE_BLUE}'
+    cssProperties:
+    - stroke
+    comment: Hover stroke color for our product brand blue.
+  COLOR_STROKE_BRAND_ACTIVE:
+    value: '{!BISCAY}'
+    cssProperties:
+    - stroke
+    comment: Active stroke color for our product brand blue.
+  COLOR_BORDER_CANVAS_ELEMENT_SELECTION:
+    value: '{!MALIBU}'
+    specificity: builders
+    comment: Used to delineate the boundary of a selected canvas element. Specific to builders.
+  COLOR_BORDER_CANVAS_ELEMENT_SELECTION_HOVER:
+    value: '{!ENDEAVOUR}'
+    specificity: builders
+    comment: Used to delineate the boundary of a selected canvas element that is being hovered over. Specific to builders.
+  COLOR_BORDER_BUTTON_BRAND:
+    value: '{!SCIENCE_BLUE}'
+    comment: Border color for brandable primary button
+    access: global
+  COLOR_BORDER_BUTTON_FOCUS_INVERSE:
+    value: '{!PALETTE_COOL_GRAY_4}'
+  COLOR_BORDER_LINK_FOCUS_INVERSE:
+    value: '{!PALETTE_COOL_GRAY_4}'
+  COLOR_BORDER_INPUT_CHECKBOX_SELECTED_CHECKMARK:
+    value: '{!WHITE}'
+    comment: The borders to create the checkmark
+    access: global
