--- a/packages/design-system/design-tokens/extensions/ui-force/deprecated/spacing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/deprecated/spacing.yml
@@ -7,8 +7,9 @@ global:
   cssProperties:
   - 'margin*'
   - 'padding*'
+  deprecated: true
 imports:
-- ../../aliases/spacing.yml
+- ../../../aliases/spacing.yml
 props:
   COMPONENT_SPACING_MARGIN:
     value: '0'
