--- a/packages/design-system/design-tokens/extensions/ui-one/base.yml
+++ b/packages/design-system/design-tokens/extensions/ui-one/base.yml
@@ -2,5 +2,4 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 imports:
-- ./duration.yml
-- ./sizing.yml
+- ./deprecated/base.yml
