--- a/packages/design-system/design-tokens/global/base.yml
+++ b/packages/design-system/design-tokens/global/base.yml
@@ -7,6 +7,7 @@ imports:
 - ./border-color.yml
 - ./border-radius.yml
 - ./box-shadow.yml
+- ./duration.yml
 - ./font-family.yml
 - ./font-size.yml
 - ./font-weight.yml
