--- a/packages/design-system/design-tokens/global/box-shadow.yml
+++ b/packages/design-system/design-tokens/global/box-shadow.yml
@@ -6,6 +6,7 @@ global:
   category: shadow
   cssProperties:
   - box-shadow
+  scope: global
 imports:
 - ../aliases/offset.yml
 - ../aliases/color-palettes.yml
