--- a/packages/design-system/design-tokens/global/text-color.yml
+++ b/packages/design-system/design-tokens/global/text-color.yml
@@ -11,9 +11,6 @@ imports:
 - ../aliases/colors.yml
 - ../aliases/color-palettes.yml
 props:
-  COLOR_TEXT_PRIMARY:
-    value: '{!BISCAY}'
-    comment: Primary body text color
   COLOR_TEXT_DEFAULT:
     value: '{!BISCAY}'
     comment: Body text color
@@ -25,9 +22,11 @@ props:
   COLOR_TEXT_ACTION_LABEL:
     value: '{!PALETTE_COOL_GRAY_9}'
     comment: Action label text color
+    access: global
   COLOR_TEXT_ACTION_LABEL_ACTIVE:
     value: '{!BISCAY}'
     comment: Action label active text color
+    access: global
   COLOR_TEXT_BRAND:
     value: '{!AZURE}'
     comment: Our product brand blue.
@@ -40,14 +39,15 @@ props:
   COLOR_TEXT_ERROR:
     value: '{!FLUSH_MAHOGANY}'
     comment: Error text for inputs and error misc
-
+    access: global
   COLOR_TEXT_INVERSE:
     value: '{!WHITE}'
     comment: Inverse text color for dark backgrounds
+    access: global
   COLOR_TEXT_INVERSE_WEAK:
     value: '{!PALETTE_COOL_GRAY_7}'
     comment: Weak inverse text color for dark backgrounds
-
+    access: global
   COLOR_TEXT_LINK:
     value: '{!SCIENCE_BLUE}'
     comment: Link text (508)
@@ -105,18 +105,23 @@ props:
   COLOR_TEXT_ICON_DEFAULT:
     value: '{!PALETTE_COOL_GRAY_9}'
     comment: Default icon color.
-
+    access: global
   COLOR_TEXT_LABEL:
     value: '{!PALETTE_COOL_GRAY_9}'
     comment: Text color for field labels.
-
+    access: global
   COLOR_TEXT_PLACEHOLDER:
     value: '{!PALETTE_COOL_GRAY_9}'
     comment: Input placeholder text.
-
+    access: global
+  COLOR_TEXT_PLACEHOLDER_INVERSE:
+    value: '{!PALETTE_COOL_GRAY_4}'
+    comment: Input placeholder text on dark backgrounds.
+    access: global
   COLOR_TEXT_REQUIRED:
     value: '{!FLUSH_MAHOGANY}'
     comment: Color of required field marker.
+    access: global
   COLOR_TEXT_SUCCESS:
     value: '{!FOREST_GREEN}'
     comment: Text color for success text.
