--- a/packages/design-system/design-tokens/themes/oneSalesforce/deprecated/box-shadow.yml
+++ b/packages/design-system/design-tokens/themes/oneSalesforce/deprecated/box-shadow.yml
@@ -8,17 +8,22 @@ global:
   - box-shadow
   deprecated: true
 imports:
+- ../../../aliases/offset.yml
 - ../../../aliases/color-palettes.yml
 props:
-  ## STATIC SHADOWS
   SHADOW_HARD_PRIMARY:
     value: '{!BLACK_TRANSPARENT_10} 0 2px 0'
     comment: Hard dropshadow found on general UI elements such as containers
   SHADOW_SOFT_PRIMARY:
     value: '{!BLACK_TRANSPARENT_10} 0 2px 2px'
     comment: Soft dropshadow found on general UI elements such as containers
-  ## INTERACTIONS
   SHADOW_SOFT_PRIMARY_HOVER:
     value: '{!BLACK_TRANSPARENT_20} 0 3px 6px'
   SHADOW_SOFT_PRIMARY_ACTIVE:
     value: '{!BLACK_TRANSPARENT_20} 0 1px 1px'
+  SHADOW_BUTTON_FOCUS_INVERSE:
+    value: '{!OFFSET_NONE} {!OFFSET_NONE} {!OFFSET_SMALL}px {!PALETTE_GRAY_4}'
+    comment: Custom glow for focus states on UI elements with explicit containers on dark or vibrantly colored backgrounds.
+  SHADOW_LINK_FOCUS_INVERSE:
+    value: '{!OFFSET_NONE} {!OFFSET_NONE} {!OFFSET_SMALL}px {!PALETTE_GRAY_4}'
+    comment: Custom glow for focus states on UI link elements with explicit containers on dark or vibrantly colored backgrounds.
