chore(arch): Remove unused mixins and deprecated tokens (#3697)

--- a/packages/design-system/design-tokens/var-spacing.yml
+++ b/packages/design-system/design-tokens/var-spacing.yml
@@ -1,6 +1,10 @@
 # Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
+# ----------- #
+# This file is only used on the documentation site
+# ----------- #
+
 global:
   category: spacing
   type: size
