feat(storybook): Implement Storybook 5.0 (#3821)
* feat(storybook): Implement Storybook 5.0

* Fix compiling error on docs generation

--- a/packages/design-system/.babelrc
+++ b/packages/design-system/.babelrc
@@ -2,7 +2,8 @@
   "presets": ["react"],
   "plugins": [
     "transform-es2015-modules-commonjs",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "syntax-dynamic-import"
   ],
   "env": {
     "test": {
