--- a/packages/design-system/.gitignore
+++ b/packages/design-system/.gitignore
@@ -18,6 +18,7 @@
 !/.travis.yml
 !/.github
 !/.prettierignore
+!/.storybook
 
 # Add a .gitkeep file in an empty
 # directory to check it in the repository
