--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -23,6 +23,10 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "7.4.4",
+    "@epegzz/sass-vars-loader": "4.3.1",
+    "@mdx-js/loader": "1.0.18",
+    "@mdx-js/mdx": "1.0.18",
     "@salesforce-ux/build-server-api": "2.0.2",
     "@salesforce-ux/create-snap": "0.0.6",
     "@salesforce-ux/design-system-markup": "2.0.2",
@@ -32,6 +36,13 @@
     "@salesforce-ux/instant-vrt": "2.0.0",
     "@salesforce-ux/scss-parser-aura": "3.0.4",
     "@std/esm": "0.23.2",
+    "@storybook/addon-a11y": "5.0.11",
+    "@storybook/addon-options": "5.0.11",
+    "@storybook/addon-viewport": "5.0.11",
+    "@storybook/addons": "5.0.11",
+    "@storybook/react": "5.0.11",
+    "@storybook/theming": "5.0.11",
+    "ajv": "6.10.0",
     "async": "2.3.0",
     "autoprefixer": "6.7.7",
     "axe-core": "3.0.3",
@@ -41,6 +52,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "22.4.1",
     "babel-loader": "7.1.3",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-es2015": "6.18.0",
@@ -50,11 +62,14 @@
     "classnames": "2.2.5",
     "colors": "1.1.2",
     "conventional-changelog": "1.1.4",
+    "copy-webpack-plugin": "5.0.3",
+    "core-js": "2.6.5",
+    "css-loader": "2.1.1",
     "cssstats": "3.0.0",
     "data.either": "1.5.0",
     "del": "2.2.2",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
     "eslint": "5.6.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-config-standard": "12.0.0",
@@ -128,6 +143,7 @@
     "openport": "0.0.4",
     "plugin-error": "1.0.1",
     "postcss": "5.2.16",
+    "postcss-loader": "3.0.0",
     "postcss-nested-props": "2.0.0",
     "postcss-scss": "1.0.6",
     "precss": "3.1.2",
@@ -136,9 +152,10 @@
     "puppeteer": "0.10.1",
     "query-ast": "1.0.1",
     "raw-loader": "0.5.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-test-renderer": "16.4.1",
+    "resolve-url-loader": "3.1.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "scss-inline-imports": "1.0.5",
@@ -147,6 +164,7 @@
     "simple-git": "1.107.0",
     "strip-indent": "2.0.0",
     "style-loader": "0.19.0",
+    "styled-components": "4.2.0",
     "stylelint": "7.10.1",
     "stylelint-config-slds": "1.0.7",
     "stylestats": "7.0.1",
@@ -156,7 +174,7 @@
     "touch": "3.1.0",
     "vinyl": "2.1.0",
     "vnu-jar": "17.11.1",
-    "webpack": "4.0.0",
+    "webpack": "4.31.0",
     "webpack-cli": "2.0.9",
     "yargs": "8.0.1"
   },
@@ -188,6 +206,8 @@
     "pr-checks": "npm run gulp -- pr-checks",
     "compile-aura-tokens-map": "npm run gulp -- generate:auraTokensMap",
     "compile-token-component-map": "npm run gulp -- generate:tokenComponentMap",
+    "storybook": "npm run build && start-storybook -s ./.dist -p 9002 -c .storybook",
+    "storybook-build": "build-storybook -c .storybook -o .out",
     "release-notes:compile": "node ./scripts/release-notes/index.js",
     "release-notes:hook": "node ./scripts/release-notes/hook.js"
   },
