feat(buttons, button-icon, file-selector): Add larger tap targets for touch devices via media queries (#3700)
* Add touch-device media query mixin

* Update buttons and add token

* Update button icons and add token

* Update checkbox button group and add token

* Remove max-height for file selector button

* Update radio button group and add token

* Attempt to fix Travis checksum error

* Travis Fix 2: Electric Boogaloo

* Revert nvm install version

* Travis #3!

* Update package-lock.json

* Standardize token nomenclature

* Update package-lock.json

--- a/packages/design-system/ui/components/buttons/tokens/line-height.yml
+++ b/packages/design-system/ui/components/buttons/tokens/line-height.yml
@@ -18,3 +18,6 @@ props:
     value: 1.75rem
     comment: Line heights for small buttons
     access: global
+  BUTTON_LINE_HEIGHT_TOUCH:
+    value: 2.65rem
+    comment: Line height for touch screens
