chore(ops): Add node to Procfile and script calls for Storybook Heroku deployment (#3827)
* add node to Profile for Storybook Heroku deployment

* chore(infra): Attempting to get Heroku preview apps functioning

* modify storybook:build script

* chore(infra): Tweak the Storybook build sequence

* simplify Procfile to just run static build

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -182,7 +182,7 @@
     "fsevents": "*"
   },
   "engines": {
-    "node": ">=8.0.0",
+    "node": "^10.0.0",
     "npm": ">=3.10.6"
   },
   "license": "SEE LICENSE IN README.md",
@@ -206,10 +206,12 @@
     "pr-checks": "npm run gulp -- pr-checks",
     "compile-aura-tokens-map": "npm run gulp -- generate:auraTokensMap",
     "compile-token-component-map": "npm run gulp -- generate:tokenComponentMap",
-    "storybook": "npm run build && start-storybook -s ./.dist -p 9002 -c .storybook",
-    "storybook-build": "build-storybook -c .storybook -o .out",
+    "storybook": "npm run build && start-storybook -s .dist/ -p 9002 -c .storybook",
+    "storybook:heroku": "start-storybook -c .storybook -p 9002",
+    "storybook:build": "build-storybook -c .storybook -s .dist/ -o .out",
     "release-notes:compile": "node ./scripts/release-notes/index.js",
-    "release-notes:hook": "node ./scripts/release-notes/hook.js"
+    "release-notes:hook": "node ./scripts/release-notes/hook.js",
+    "heroku-postbuild": "npm run build && npm run dist && npm run storybook:build"
   },
   "lint-staged": {
     "linters": {
