feat(input): increase tap target size (#3835)
* feat(input): create mixin for components that rely on line-height for overall height
Create standard token for touch height

* feat(input): remove form-factor/small/sizing after height-input became deprecated
add touch height to input

* feat(input): fix how increment buttons are vertically centered
New vertical-center mixin

--- a/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
@@ -32,4 +32,7 @@ props:
     comment: "Maximum width for action overflow menu so that it's not full-screen for tablet."
   SQUARE_TAPPABLE:
     value: 2.75rem
-    comment: Tap target Size
+    comment: Tap target size for elements that rely on width and height dimensions
+  HEIGHT_TAPPABLE:
+    value: 2.75rem
+    comment: Tap target size for elements that rely on height or line-height
