--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -37,6 +37,7 @@
     "@salesforce-ux/scss-parser-aura": "3.0.4",
     "@std/esm": "0.23.2",
     "@storybook/addon-a11y": "5.0.11",
+    "@storybook/addon-backgrounds": "5.0.11",
     "@storybook/addon-options": "5.0.11",
     "@storybook/addon-viewport": "5.0.11",
     "@storybook/addons": "5.0.11",
