fix(pills): Increase font size and tap target size of pills for touch (#3857)
* chore(docs): add Storybook stories for pills

* fix(pills): increase type size and tap target size of pills

* chore(docs): fix import for pills kitchen sink

* fix(pills): update pills to latest touch specs

* fix(pills): make padding of slds-pill__action more decipherable

* fix(pill): fix syntax error

* chore(docs): add Storybook stories for pills

* fix(pills): increase type size and tap target size of pills

* chore(docs): fix import for pills kitchen sink

* fix(pills): update pills to latest touch specs

* fix(pills): make padding of slds-pill__action more decipherable

* fix(pill): fix syntax error

* fix(pills): tweak icon spacing

* fix(pills): udpate padding between horizontal listbox items

* fix(pills): Modified spacing between pills when inside a selection group

--- a/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
+++ b/packages/design-system/design-tokens/extensions/ui-force/sizing.yml
@@ -36,3 +36,6 @@ props:
   HEIGHT_TAPPABLE:
     value: 2.75rem
     comment: Tap target size for elements that rely on height or line-height
+  HEIGHT_TAPPABLE_SMALL:
+    value: 2rem
+    comment: Small tap target size for elements that rely on height or line-height
